--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -1122,10 +1122,10 @@ continuity equation. In the above, we have neglected $\frac{\partial \kappa}{\pa
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-1-D and 2-D numerical solutions for the Euler equations with viscous regularization using the entropy 
+1-D and 2-D numerical solutions for the Euler equations with viscous regularization solved using the entropy 
 viscosity method are presented here.
-Our results validate the chosen definitions for the viscosity coefficients in the low-Mach limit and 
-verify that the new definitions resolve shocks appropriately. 
+Our results show that the new definitions for the viscosity coefficients are robust in the low-Mach limit as well as for
+for transonic and supersonic flows and that shocks are appropriately resolved. 
 
 The first set of 1-D simulations consist of liquid water and steam flowing in a converging-diverging nozzle. 
 This test is of interest for multiple reasons: (a) a steady state can be reached (some stabilization methods 
@@ -1142,10 +1142,10 @@ convergence of the numerical solution to the exact solution.
 A slow moving shock is also investigated \cite{james}. This test helps in assessing the ability of 
 the method to damp the post-shock low frequency noise (oscillations). 
 %
-Finally, a strong shock for a liquid phase is also investigated\cite{abgrall}.
+Finally, a strong shock for a liquid phase \tcr{(Mach number around 0.1)}\tcr{I added this info. Check if you agree} is also performed \cite{abgrall}.
 
-The initial conditions (density in $kg.m^{-3}$, velocity in $m.s^{-1}$, pressure in $Pa$) for the 
-aforementioned 1-D shock tubes are given in \tbl{tbl:ic_1d_tests}.
+The initial conditions for the 
+aforementioned 1-D test cases are given in \tbl{tbl:ic_1d_tests}.
 \begin{table}[!htbp]
 \begin{center}
 \begin{tabular}{|c|c|c || c|c|c|}
@@ -1159,7 +1159,7 @@ $1000$ & $0$ & $10^{9}$ & $1000$ & $0$ & $10^{5}$                         \\ \hl
 $1$ & $-0.81$ & $1$ & $3.86$ & $-3.44$ & $10.33$                                     \\ \hline
 \end{tabular}
 \end{center}
-\caption{\label{tbl:ic_1d_tests} Initial conditions for the 1-D shock tube tests.}
+\caption{\label{tbl:ic_1d_tests} Initial conditions for the 1-D test cases (density in $kg.m^{-3}$, velocity in $m.s^{-1}$, pressure in $Pa$).}
 \end{table} 
 
 2-D simulations are presented next. 
