compression corner is not transonic

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -1166,7 +1166,7 @@ $1$ & $-0.81$ & $1$ & $3.86$ & $-3.44$ & $10.33$                                
 The 2-D simulations are outlined next. 
 First, 2-D subsonic flows around a cylinder \cite{LowMach3} and over a circular hump \cite{Hump} 
 are presented for various far-field Mach numbers (as low of $10^{-7}$). Numerical results of a 
-transonic \tcr{two times elsewhere that problem was described as supersonic but here you use transonic. which is it?} flow over a compression corner are provided to illustrate the ability of the new viscosity 
+supersonic \tcr{you had transonic here but I think this problem is 100\% supersonic} flow over a compression corner are provided to illustrate the ability of the new viscosity 
 definitions to handle supersonic flows. Convergence studies are performed when analytical solutions are available. 
 
 For each simulation, data relative to the boundary conditions, the Courant-Friedrichs-Lewy number ($CFL$), 
@@ -1280,7 +1280,7 @@ illustration of the effect of ill-scaled dissipative terms.
 %
 Note that the entropy viscosity coefficient is very small compared to the first-order one (\fig{fig:1d_nozzle_liq_visc}): 
 (i) the numerical solution is smooth as shown in \fig{fig:1d_liq_nozzle} and (ii) the flow is in a low-Mach regime and thus 
-isentropic\tcr{should we take isentropic here? maybe}. A convergence study was performed using the exact solution as a reference: the L$_1$ and L$_2$ norms of the 
+isentropic\tcr{should we keep isentropic here? maybe}. A convergence study was performed using the exact solution as a reference: the L$_1$ and L$_2$ norms of the 
 error and the corresponding convergence rates are computed at steady state on various uniform meshes from 4 to 256 cells.
 Spatial convergence results using linear finite elements are reported in \tbl{tbl:l1_norm_liq} and \tbl{tbl:l2_norm_liq} 
 for the primitive variables: density, velocity and pressure.
