--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -1228,9 +1228,13 @@ For each simulation, data relative to the boundary conditions, the Courant-Fried
 mesh and equation of state are provided. All of the numerical solutions presented are obtained using BDF2 
 as temporal integrator and linear (1-D mesh), $\mathbb{P}_1$ (2-D triangular mesh), and $\mathbb{Q}_1$ 
 (2-D quadrangular mesh) finite elements. The spatial integrals are numerically computed using a second-order 
-Gauss quadrature rule. The steady-state solution is detected from the transient simulation by controlling the norm of 
-the total residual and monitoring when it falls 
-below $10^{-6}$. The ideal gas \cite{IGEOS} or stiffened gas equations of state \cite{SGEOS} are used; a 
+Gauss quadrature rule. Steady-state is detected in a transient simulation by monitoring the rate of change of the
+conservative variables. \tcr{I have removed your portion about the total residual falling below $10^{-6}$: 
+you don't clearly define total residual. Since we are implicit and thus have nonlinear residual in Newton solves, a 
+reader may think you're talking about that residual. I think you wanted to say norm of the steady state residual, but
+in this case we still need to define it. I decided to say something simpler, rate of chage, that means $\frac{u^{n+1}-u^n}{\Delta t}$
+but this may be wrong as well. It depends on how the steady-state residual are defined. Are they multiplied by $\Delta t$ or not. Please advise\\}
+The ideal gas \cite{IGEOS} or stiffened gas equations of state \cite{SGEOS} are used; a 
 generic expression is given in \eqt{eq:eos}.
 %
 \begin{equation}
