--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -510,10 +510,10 @@ derivative ($\partial_n = \grad \cdot \vec{n}$) across the common face separatin
 be further referred to as the inter-element jump. We take the largest value over all faces $f$ present on the 
 boundary $\partial K$ of element $K$:
 %
-\tcr{I added $\| \vec{u} \|$ below. The units between the residual and the jumps were not the same. Check}
+\tcr{I added $\| \vec{u} \|$ below. The units between the residual and the jumps were not the same. Check} \tcb{it is correct}
 \begin{equation}
 \label{eq:jump_CFEM}
-J^K[s](t) = \| \vec{u} \| \max_{f\in\partial K}  \max_{\vec{r}_q \in f} \jmp{\grad s(\vec{r}_q,t) \cdot \vec{n}(\vec{r}_q) }_f \, ,
+J^K[s](t) = \max_{f\in\partial K}  \max_{\vec{r}_q \in f} \| \vec{u}(\vec{r}_q,t) \| \jmp{\grad s(\vec{r}_q,t) \cdot \vec{n}(\vec{r}_q) }_f \, ,
 \end{equation}
 %
 where $\jmp{a(\vec{r}_q)}_f$ denotes the inter-element jump in $a(\vec{r})$ at quadrature point $\vec{r}_q$ on face $f$ 
@@ -541,7 +541,7 @@ examples and various 2-D tests \cite{jlg1, jlg2, valentin}.
 \subsection{Issues in the Low-Mach Regime} 
 %===================================================================================================
 \tcr{I worked on Yunhuang's 2 papers last week so I will let you change, wherever needed, isentropic for 
-low-Mach as was suggested during your defense. If I recall correctly, we said }
+low-Mach as was suggested during your defense. If I recall correctly, we said } \tcb{ I still have to do this}
 
 In the low-Mach Regime, the flow is known to approach the isentropic limit, resulting in very little 
 entropy production. Since the entropy viscosity method is directly based on the evaluation of the 
@@ -906,7 +906,7 @@ A smooth function to transition between these two states is as follows: % the sh
 where $M^\text{thresh}$ is a threshold Mach number value beyond which the flow is no longer 
 considered  to be low-Mach (we use $M^\text{thresh}=0.05$), $M$ is the local Mach number, 
 and the scalar $a$ determines how rapid the transition from  
-$\norm_P^\mu= \rho c^2$ to $\norm_P^\mu=\rho \| \vec{u}\|^2$ occurs in the vicinity of $M^\text{thresh}$. 
+$\norm_P^\mu= \rho c^2$ to $\norm_P^\mu=\rho \| \vec{u}\|^2$ occurs in the vicinity of $M^\text{thresh}$ (we use $a = 3$). 
 It is easy to verify that
 \begin{equation}
 \label{eq:norm_ent3}
@@ -995,7 +995,7 @@ and the entropy viscosity coefficients by
 with the jumps given by
 %
 \begin{equation}
-J = || \vec{u} || \max \Big ( [[ \grad P \cdot \vec{n} ]], c^2 [[\grad \rho \cdot \vec{n}]] \Big) 
+J = \max \Big ( || \vec{u} || [[ \grad P \cdot \vec{n} ]], || \vec{u} || c^2 [[\grad \rho \cdot \vec{n}]] \Big) 
 \end{equation}
 \end{subequations}
 %
@@ -1199,7 +1199,7 @@ convergence of the numerical solution to the exact solution.
 A slow moving shock is also investigated \cite{james}. This test helps in assessing the ability of 
 the method to damp the post-shock low frequency noise (oscillations). 
 %
-Finally, a strong shock for a liquid phase \tcr{(Mach number around 0.1)}\tcr{I added this info. Check if you agree} is also performed \cite{abgrall}.
+Finally, a strong shock for a liquid phase \tcr{(Mach number around 0.1)}\tcr{I added this info. Check if you agree} \tcb{it is correct} is also performed \cite{abgrall}.
 
 The initial conditions for the aforementioned 1-D test cases are given in \tbl{tbl:ic_1d_tests}.
 \begin{table}[!htbp]
@@ -1221,7 +1221,7 @@ $1$ & $-0.81$ & $1$ & $3.86$ & $-3.44$ & $10.33$                                
 The 2-D simulations are outlined next. 
 First, 2-D subsonic flows around a cylinder \cite{LowMach3} and over a circular hump \cite{Hump} 
 are presented for various far-field Mach numbers (as low of $10^{-7}$). Numerical results of a 
-supersonic \tcr{you had transonic here but I think this problem is 100\% supersonic} flow over a compression corner are provided to illustrate the ability of the new viscosity 
+supersonic \tcr{you had transonic here but I think this problem is 100\% supersonic} \tcb{it is probably better to use supersonic instead of transonic since the inlet is supersonic} flow over a compression corner are provided to illustrate the ability of the new viscosity 
 definitions to handle supersonic flows. Convergence studies are performed when analytical solutions are available. 
 
 For each simulation, data relative to the boundary conditions, the Courant-Friedrichs-Lewy number ($CFL$), 
@@ -1232,8 +1232,8 @@ Gauss quadrature rule. Steady-state is detected in a transient simulation by mon
 conservative variables. \tcr{I have removed your portion about the total residual falling below $10^{-6}$: 
 you don't clearly define total residual. Since we are implicit and thus have nonlinear residual in Newton solves, a 
 reader may think you're talking about that residual. I think you wanted to say norm of the steady state residual, but
-in this case we still need to define it. I decided to say something simpler, rate of chage, that means $\frac{u^{n+1}-u^n}{\Delta t}$
-but this may be wrong as well. It depends on how the steady-state residual are defined. Are they multiplied by $\Delta t$ or not. Please advise\\}
+in this case we still need to define it. I decided to say something simpler, rate of change, that means $\frac{u^{n+1}-u^n}{\Delta t}$
+but this may be wrong as well. It depends on how the steady-state residual are defined. Are they multiplied by $\Delta t$ or not. Please advise\\} \tcb{The stt residual is not multiplied by $\Delta t$ if I remember correctly. I monitored the norm of the total residual (time dependent and stt terms) and started with a residual of the order of $10$}
 The ideal gas \cite{IGEOS} or stiffened gas equations of state \cite{SGEOS} are used; a 
 generic expression is given in \eqt{eq:eos}.
 %
@@ -1260,7 +1260,7 @@ liquid water (\sct{sec:liquid_shock})  & 4.4      & 1000                       &
 \end{center}
 \end{table}
 %
-The entropy function for the stiffened gas equation of state is convex \tcr{am I tired or should this be concave?} and given by
+The entropy function for the stiffened gas equation of state is concave \tcr{am I tired or should this be concave?} \tcb{done} and given by
 %
 \begin{equation*}
 s = C_v \ln \left( \frac{P+P_\infty}{\rho^{\gamma-1}} \right) ,
@@ -1268,9 +1268,13 @@ s = C_v \ln \left( \frac{P+P_\infty}{\rho^{\gamma-1}} \right) ,
 where $C_v$ is the heat capacity at constant volume. \\
 
 Finally, the convergence rates are computed using the following relation 
+%\begin{equation}
+%\label{eq:conv_rates}
+%\text{rate}_h = \ln \left( \frac{|| U_{2h}-U_{\text{exact}} || - || U_{h}-U_{\text{exact}} ||}{|| U_{h}-U_{\text{exact}} || - || U_{h/2}-U_{\text{exact}} || } \right) / \ln 2
+%\end{equation}
 \begin{equation}
 \label{eq:conv_rates}
-\text{rate}_h = \ln \left( \frac{|| U_{2h}-U_{\text{exact}} || - || U_{h}-U_{\text{exact}} ||}{|| U_{h}-U_{\text{exact}} || - || U_{h/2}-U_{\text{exact}} || } \right) / \ln 2
+\text{rate}_h = \ln \left( \frac{|| U_{2h}-U_{\text{exact}} ||}{|| U_{h}-U_{\text{exact}}|| } \right) / \ln 2
 \end{equation}
 where $|| \cdot ||$ denotes either the L$_1$ or L$_2$ norms and $h$ is the characteristic grid size.
 
@@ -1282,7 +1286,7 @@ Second, here I believe that you do have an exact solution available. So, why do 
 $[u(2h)-u(exact)]/[u(h)-u(exact)] = 2^p$.
 So, why use the formula that requires 3 data points when you do have the exact solution and just need two data points?
 }
-
+\tcb{I only did convergence tests using the exact solution. I modified the formula. I do not know what happened but this is not the one I used.}
 %---------------------------------------------------------------------------------------------------
 \subsection{Liquid water in a 1-D converging-diverging nozzle} \label{sec:liquid_nozzle}
 %---------------------------------------------------------------------------------------------------
@@ -1338,8 +1342,9 @@ On the other hand, the numerical solution obtained with the FOV does not give th
 illustration of the effect of ill-scaled dissipative terms. 
 %
 Note that the entropy viscosity coefficient is very small compared to the first-order one (\fig{fig:1d_nozzle_liq_visc}): 
-(i) the numerical solution is smooth as shown in \fig{fig:1d_liq_nozzle} and (ii) the flow is in a low-Mach regime and thus 
-isentropic\tcr{should we keep isentropic here? maybe}. A convergence study was performed using the exact solution as a reference: the L$_1$ and L$_2$ norms of the 
+(i) the numerical solution is smooth as shown in \fig{fig:1d_liq_nozzle} and (ii) the flow is in a isentropic low-Mach regime 
+%and thus isentropic 
+\tcr{should we keep isentropic here? maybe} \tcb{done}. A convergence study was performed using the exact solution as a reference: the L$_1$ and L$_2$ norms of the 
 error and the corresponding convergence rates are computed at steady state on various uniform meshes from 4 to 256 cells.
 Spatial convergence results using linear finite elements are reported in \tbl{tbl:l1_norm_liq} and \tbl{tbl:l2_norm_liq} 
 for the primitive variables: density, velocity and pressure.
@@ -2194,10 +2199,10 @@ or known to be positive. Thus, the entropy minimum principle holds.
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Entropy residual with an isentropic equations of state} \label{app:ise_equ}
+\section{Entropy residual with a barotropic equations of state} \label{app:ise_equ}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\tcr{what is an isentropic EoS? Do you want to say entropy residual formulation with a barotropic fluid instead?}
+\tcr{what is an isentropic EoS? Do you want to say entropy residual formulation with a barotropic fluid instead?} \tcb{done}
 
 This appendix shows that the entropy residual is zero when assuming an isentropic flow. The entropy residual as a 
 function of the pressure, density, velocity, and speed of sound is recalled here:
@@ -2205,7 +2210,7 @@ function of the pressure, density, velocity, and speed of sound is recalled here
 \begin{equation}\label{eq:app_entr}
 \resinew = \matder P - c^2  \matder \rho \,.
 \end{equation}
-\tcr{check everywhere in this section. I have put the material derivative sign where you only had $d/dt$.}
+\tcr{check everywhere in this section. I have put the material derivative sign where you only had $d/dt$.} \tcb{looks good}
 %
 Assuming an isentropic flow, the pressure is only a function of the density $P = f( \rho )$ or $\rho = f^{-1}( P )$. 
 Using the definition of the speed of sound $c^2 = \left. \frac{\partial P}{\partial \rho} \right)_s$ and the above 
